@@ -18,6 +18,7 @@ WMA = 75
 OGG = 133
 FLAC = 160
 WAV = 10
-;the ff are not hardware decoded yet
-AT3 = 222 
-AA3 = 222
+AT3 = 30
+;only atrac3 and not atrac3plus is supported yet
+AA3 = 30
+OMA = 30
